--- a/src/scss/components/blog.scss
+++ b/src/scss/components/blog.scss
@@ -121,7 +121,7 @@
 }
 
 // blog more
-.blog-more__head {
+.blog__item--more {
     display: flex;
     align-items: flex-start;
     justify-content: center;
