--- a/src/scss/components/recentProjects.scss
+++ b/src/scss/components/recentProjects.scss
@@ -34,6 +34,7 @@
     border-radius: 20px;
     border: 1px solid #E7E5EA;
     padding: 6px 14px;
+    transition: all 0.4s;
 
 }
 
@@ -57,6 +58,8 @@
     align-items: center;
     flex-direction: column;
     border-radius: 24px;
+
+    transition: all 0.4s;
 
 }
 
