--- a/src/scss/components/client.css
+++ b/src/scss/components/client.css
@@ -1,10 +1,8 @@
 .client {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  width: 100%;
+  padding-bottom: 120px;
   background-color: #F8FAFC;
-  position: relative;
+  overflow: hidden;
 }
 
 .client__heading {
@@ -13,6 +11,9 @@
   font-size: 48px;
   font-weight: 500;
   line-height: 116.667%;
+  padding: 20px 0px;
+  margin-top: 100px;
+  text-align: center;
 }
 
 .client__sub {
@@ -21,6 +22,12 @@
   font-size: 22px;
   font-weight: 400;
   line-height: 145.455%;
+  padding: 10px 0px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .client__btn {
@@ -34,23 +41,98 @@
   align-items: center;
   justify-content: center;
   gap: 16px;
-}
-
-.client__btn i {
   font-size: 14px;
   color: #FFF;
+  transform: translate(500%, -66%);
+}
+
+.client__btn i:first-child {
+  padding: 15px 0px 15px 15px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.client__btn i:first-child:hover {
+  color: #4F77FF;
+}
+
+.client__btn i:last-child {
+  padding: 15px 15px 15px 0px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.client__btn i:last-child:hover {
+  color: #4F77FF;
+}
+
+.client__feedback {
+  position: relative;
 }
 
 .client__item {
   padding: 35px 35px 45px 35px;
   border-radius: 20px;
+  border: 1px solid #E7E5EA;
   background-color: #FFF;
+  min-height: 350px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin: 0px 15px;
+  transition: box-shadow 0.4s;
+}
+
+.client__item:hover {
+  box-shadow: 0px 20px 50px 0px rgba(79, 119, 255, 0.2);
 }
 
 .client__avata {
   border-radius: 50%;
+}
+
+.client__name {
+  color: #2D3958;
+  font-family: Outfit;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 145.455%;
+  padding: 10px 0px 5px 0px;
+}
+
+.client__brand {
+  color: #7B88A8;
+  font-family: DM Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 162.5%;
+  padding-bottom: 10px;
+}
+
+.client__feel {
+  color: #2D3958;
+  font-family: Outfit;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 155.556%;
+  padding: 10px 0px;
+}
+
+.client__description {
+  color: #7B88A8;
+  text-align: center;
+  font-family: DM Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 155.556%;
+  padding-top: 15px;
+}
+
+.client__next {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+  opacity: 0.5;
 }/*# sourceMappingURL=client.css.map */
