--- a/src/scss/components/client.scss
+++ b/src/scss/components/client.scss
@@ -1,14 +1,12 @@
 .client {
     width: 100%;
-    height: 781px;
+    padding-bottom: 120px;
     background-color: #F8FAFC;
     overflow: hidden;
 
 }
 
 .client__content {
-    // position: relative;
-
 
 }
 
@@ -32,14 +30,12 @@
     font-weight: 400;
     line-height: 145.455%;
     padding: 10px 0px;
-    margin-bottom: 70px;
     text-align: center;
 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: relative;
 
 }
 
@@ -59,33 +55,32 @@
     font-size: 14px;
     color: #FFF;
 
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 1;
-    transform: translate(-300%, -24%);
+    transform: translate(500%, -66%);
 
 }
 
 .client__btn i:first-child {
     padding: 15px 0px 15px 15px;
+    cursor: pointer;
+    transition: color 0.3s;
 
 }
 
 .client__btn i:first-child:hover {
     color: #4F77FF;
-    cursor: pointer;
 
 }
 
 .client__btn i:last-child {
     padding: 15px 15px 15px 0px;
+    cursor: pointer;
+    transition: color 0.3s;
 
 }
 
 .client__btn i:last-child:hover {
     color: #4F77FF;
-    cursor: pointer;
+
     
 }
 
@@ -107,6 +102,8 @@
     justify-content: center;
     flex-direction: column;
     margin: 0px 15px;
+
+    transition: box-shadow 0.4s;
 
 }
 
