--- a/src/scss/components/img.scss
+++ b/src/scss/components/img.scss
@@ -4,6 +4,7 @@
     align-items: center;
     flex-direction: column;
     margin-bottom: 120px;
+    padding: 0px 30px;
 
 }
 
@@ -61,6 +62,7 @@
     font-weight: 500;
     line-height: 160%;
     text-transform: uppercase;
+    transition: background-color 0.4s;
 
 }
 
