--- a/src/scss/components/blog.css
+++ b/src/scss/components/blog.css
@@ -7,13 +7,17 @@
   color: #2D3958;
   text-align: center;
   font-family: Outfit;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 500;
   line-height: 116.667%;
   padding: 20px 0px;
   margin-bottom: 60px;
 }
-
+@media (min-width: 992px) {
+  .blog__heading {
+    font-size: 48px;
+  }
+}
 .blog__item {
   display: flex;
   align-items: flex-start;
@@ -43,6 +47,12 @@
   font-size: 22px;
   font-weight: 400;
   line-height: 145.455%;
+  height: 100px;
+  overflow: hidden;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 
 .blog__sub {
@@ -51,6 +61,21 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 155.556%;
+  overflow: hidden;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+@media (min-width: 768px) {
+  .blog__sub {
+    -webkit-line-clamp: 2;
+  }
+}
+@media (min-width: 1200px) {
+  .blog__sub {
+    -webkit-line-clamp: 3;
+  }
 }
 
 .blog__time {
@@ -97,13 +122,33 @@
   padding-top: 5px;
 }
 
+.blog__name-second {
+  color: #2D3958;
+  font-family: Outfit;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 136%;
+  height: 118px;
+  overflow: hidden;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
+
 .blog__item--more {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-between;
   gap: 20px;
+  width: 100%;
 }
 
 .blog-more__img {
-  width: 50%;
+  width: 100px;
+}
+
+.blog__item:hover .blog__name-second {
+  text-decoration: underline;
+  color: #4F77FF;
 }/*# sourceMappingURL=blog.css.map */
