--- a/src/scss/components/img.scss
+++ b/src/scss/components/img.scss
@@ -12,11 +12,37 @@
     color: #2D3958;
     text-align: center;
     font-family: Outfit;
-    font-size: 64px;
+    font-size: 50px;
     font-style: normal;
     font-weight: 500;
     line-height: 112.5%;
     padding: 120px 20px 90px 20px;
+
+    @media (max-width: 575px) {
+        
+        
+    }
+        
+    @media (min-width: 575px) {
+      
+            
+    }
+        
+    @media (min-width: 768px) {
+        font-size: 64px;
+      
+            
+    }
+        
+    @media (min-width: 992px) {
+            
+            
+    }
+    
+    @media (min-width: 1200px) {
+            
+            
+    }
 
 }
 
@@ -36,6 +62,10 @@
 .img__item {
     border-radius: 20px;
     overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 
 }
 
