--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -404,26 +404,16 @@ h6 {
   }
 }
 .page-header {
-  height: 500px;
+  background-image: url(../../../assets/img/img_background-head.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .page-header__navigate {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.page-header__background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-}
-
-.page-header__img {
-  width: 100%;
+  padding-top: 16px;
 }
 
 .page-header__logo {
@@ -431,27 +421,37 @@ h6 {
   align-items: center;
   justify-content: center;
   text-decoration: none;
+  gap: 8px;
 }
 
 .page-header__logo-img {
-  width: 32px;
-  height: 44px;
+  display: block;
+  width: 25px;
+  height: 35px;
 }
-
+@media (min-width: 768px) {
+  .page-header__logo-img {
+    width: 32px;
+    height: 44px;
+  }
+}
 .page-header__logo-name {
-  width: 134px;
   color: #2D3958;
   font-family: Outfit;
   font-size: 24px;
   font-weight: 600;
   line-height: 133.333%;
-  padding-left: 10px;
 }
 
 .page-header__menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: none;
+}
+@media (min-width: 992px) {
+  .page-header__menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .page-header__list {
@@ -460,13 +460,13 @@ h6 {
   align-items: center;
   list-style: none;
   padding-left: 0;
-  gap: 30px;
+  gap: 25px;
 }
 
 .page-header__item {
   color: #7B88A8;
   font-family: Outfit;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 500;
   line-height: 160%;
   text-transform: uppercase;
@@ -533,68 +533,78 @@ h6 {
 }
 
 .page-header__search {
-  width: 30px;
-  height: 40px;
-  padding: 3px;
-  color: #7B88A8;
-  font-size: 20px;
-  cursor: pointer;
-  transition: all 0.1s;
+  padding-top: 10px;
 }
 
-.page-header__search:hover {
-  color: #4F77FF;
-  font-size: 22px;
+.page-header__search svg {
+  padding: 4px;
+  color: #7B88A8;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.page-header__search svg:hover {
+  transform: scale(1.2);
 }
 
 .page-header__bag {
-  color: #7B88A8;
-  width: 30px;
-  height: 40px;
-  padding: 3px;
-  font-size: 20px;
-  cursor: pointer;
+  padding-top: 10px;
   position: relative;
-  transition: all 0.1s;
 }
 
-.page-header__bag:hover {
-  color: #4F77FF;
-  font-size: 22px;
+.page-header__bag svg {
+  padding: 4px;
+  color: #7B88A8;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.page-header__bag svg:hover {
+  transform: scale(1.2);
 }
 
 .page-header__bag::before {
   content: "";
   position: absolute;
-  width: 10px;
-  height: 10px;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
   background-color: #EF3737;
-  top: 8px;
-  right: 8px;
+  top: 30%;
+  right: 12%;
 }
 
-.btn-signup {
+.page-header__signup {
   text-align: center;
-  width: 130px;
+  width: 129px;
   height: 48px;
   padding: 13px 24px;
   border-radius: 5px;
   background-color: #4F77FF;
   color: #FFF;
   font-family: Outfit;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 500;
-  line-height: 171.429%;
+  line-height: 170%;
   text-transform: uppercase;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: all 0.4s;
+  transition: all 0.3s;
+  display: none;
+}
+@media (min-width: 992px) {
+  .page-header__signup {
+    display: flex;
+  }
 }
 
-.btn-signup:hover {
+.page-header__signup:hover {
   background-color: #85a0fa;
 }
 
@@ -602,37 +612,73 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: translateY(100%);
+  overflow: hidden;
+  padding: 50px 0 100px;
+  flex-direction: column;
 }
-
+@media (min-width: 575px) {
+  .our-work {
+    padding: 100px 0 150px;
+  }
+}
+@media (min-width: 768px) {
+  .our-work {
+    padding: 150px 0 200px;
+  }
+}
 .our-work__heading {
-  width: 870px;
   color: #2D3958;
   text-align: center;
-  font-size: 48px;
+  font-size: 30px;
   font-weight: 500;
-  line-height: 116.667%;
-  padding-bottom: 30px;
+  line-height: 110%;
+}
+@media (min-width: 575px) {
+  .our-work__heading {
+    line-height: 116.667%;
+    padding-bottom: 30px;
+  }
+}
+@media (min-width: 768px) {
+  .our-work__heading {
+    font-size: 40px;
+  }
+}
+@media (min-width: 992px) {
+  .our-work__heading {
+    font-size: 48px;
+    width: 870px;
+  }
 }
 
 .our-work__description {
-  width: 870px;
-  height: 18px;
   color: #2D3958;
   text-align: center;
   font-family: Outfit;
-  font-size: 15px;
+  font-size: 11px;
   font-weight: 500;
   line-height: 160%;
   text-transform: uppercase;
 }
-
+@media (max-width: 575px) {
+  .our-work__description {
+    padding-top: 10px;
+  }
+}
+@media (min-width: 575px) {
+  .our-work__description {
+    font-size: 13px;
+  }
+}
+@media (min-width: 768px) {
+  .our-work__description {
+    font-size: 15px;
+    width: 870px;
+    height: 18px;
+  }
+}
 .our-work__description--color {
   color: #7B88A8;
-  font-family: Outfit;
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 24px;
   text-transform: uppercase;
 }
 
@@ -653,13 +699,17 @@ h6 {
   color: #2D3958;
   text-align: center;
   font-family: Outfit;
-  font-size: 64px;
+  font-size: 50px;
   font-style: normal;
   font-weight: 500;
   line-height: 112.5%;
   padding: 120px 20px 90px 20px;
 }
-
+@media (min-width: 768px) {
+  .img__heading {
+    font-size: 64px;
+  }
+}
 .img__content {
   margin-bottom: 70px;
 }
@@ -675,6 +725,10 @@ h6 {
 .img__item {
   border-radius: 20px;
   overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .img__item img {
@@ -730,12 +784,17 @@ h6 {
   font-size: 22px;
   font-weight: 400;
   line-height: 145.455%;
-  padding: 10px 0px;
+  padding: 30px 0px;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+@media (min-width: 1200px) {
+  .client__sub {
+    padding: 10px 0px;
+  }
 }
 
 .client__btn {
@@ -745,13 +804,18 @@ h6 {
   border-radius: 50%;
   border: 1px solid rgba(79, 119, 255, 0.2);
   box-shadow: 0px 0px 22px 22px rgba(79, 119, 255, 0.2);
-  display: flex;
   align-items: center;
   justify-content: center;
   gap: 16px;
   font-size: 14px;
   color: #FFF;
   transform: translate(500%, -66%);
+  display: none;
+}
+@media (min-width: 1200px) {
+  .client__btn {
+    display: flex;
+  }
 }
 
 .client__btn i:first-child {
@@ -837,12 +901,40 @@ h6 {
   padding-top: 15px;
 }
 
-.client__next {
-  position: absolute;
-  top: 0;
-  right: 0;
-  transform: translateX(100%);
-  opacity: 0.5;
+@media (min-width: 992px) {
+  .client__next {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    opacity: 0.5;
+  }
+}
+.client__btn-mo {
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin-bottom: 50px;
+}
+@media (min-width: 1200px) {
+  .client__btn-mo {
+    display: none;
+  }
+}
+
+.client__btn-mo i {
+  border-radius: 20px;
+  border: 1px solid #E7E5EA;
+  padding: 6px 14px;
+  transition: all 0.4s;
+}
+
+.client__btn-mo i:hover {
+  cursor: pointer;
+  color: #FFF;
+  background-color: #85a0fa;
 }
 
 .recent-projects {
@@ -853,6 +945,7 @@ h6 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 56px;
 }
 
 .recent-projects__heading {
@@ -862,7 +955,6 @@ h6 {
   font-weight: 500;
   line-height: 116.667%;
   padding: 20px 0px;
-  margin-bottom: 56px;
 }
 
 .recent-projects__arrow {
@@ -944,13 +1036,17 @@ h6 {
   color: #2D3958;
   text-align: center;
   font-family: Outfit;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 500;
   line-height: 116.667%;
   padding: 20px 0px;
   margin-bottom: 60px;
 }
-
+@media (min-width: 992px) {
+  .blog__heading {
+    font-size: 48px;
+  }
+}
 .blog__item {
   display: flex;
   align-items: flex-start;
@@ -980,6 +1076,12 @@ h6 {
   font-size: 22px;
   font-weight: 400;
   line-height: 145.455%;
+  height: 100px;
+  overflow: hidden;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 
 .blog__sub {
@@ -988,6 +1090,21 @@ h6 {
   font-size: 18px;
   font-weight: 400;
   line-height: 155.556%;
+  overflow: hidden;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+@media (min-width: 768px) {
+  .blog__sub {
+    -webkit-line-clamp: 2;
+  }
+}
+@media (min-width: 1200px) {
+  .blog__sub {
+    -webkit-line-clamp: 3;
+  }
 }
 
 .blog__time {
@@ -1034,15 +1151,35 @@ h6 {
   padding-top: 5px;
 }
 
+.blog__name-second {
+  color: #2D3958;
+  font-family: Outfit;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 136%;
+  height: 118px;
+  overflow: hidden;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
+
 .blog__item--more {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-between;
   gap: 20px;
+  width: 100%;
 }
 
 .blog-more__img {
-  width: 50%;
+  width: 100px;
+}
+
+.blog__item:hover .blog__name-second {
+  text-decoration: underline;
+  color: #4F77FF;
 }
 
 .footer {
@@ -1058,19 +1195,19 @@ h6 {
 }
 
 .footer__logo-img {
+  display: block;
   width: 32px;
   height: 44px;
 }
 
 .footer__logo-name {
   width: 134px;
-  color: #FFF;
   font-family: Outfit;
   font-size: 24px;
   font-weight: 600;
   line-height: 133.333%;
   padding-left: 10px;
-  padding-top: 10px;
+  color: #FFF;
 }
 
 .footer__heading {
@@ -1116,10 +1253,11 @@ h6 {
 .footer__input {
   display: flex;
   padding: 10px 0;
+  flex-wrap: wrap;
+  gap: 8px;
 }
 
 .footer__input-mail {
-  width: 235px;
   height: 48px;
   border-radius: 5px;
   padding: 12px;
@@ -1130,6 +1268,7 @@ h6 {
   font-size: 16px;
   font-weight: 400;
   line-height: 162.5%;
+  width: 235px;
 }
 
 .footer__btn {
@@ -1144,7 +1283,6 @@ h6 {
   font-weight: 500;
   line-height: 171.429%;
   text-transform: uppercase;
-  margin-left: 8px;
   transition: all 0.3s;
 }
 
@@ -1164,10 +1302,13 @@ h6 {
 
 .footer__bottom {
   margin-top: 100px;
+  padding-top: 28px;
   border-top: 1px solid #7B88A8;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .footer__text {
@@ -1179,17 +1320,157 @@ h6 {
 }
 
 .footer__socials {
-  text-align: end;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 .footer__socials-link {
   text-decoration: none;
-  font-size: 54px;
-  color: #4F77FF;
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  background-color: #4F77FF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0px 6px;
   transition: all 0.3s;
 }
 
 .footer__socials-link:hover {
+  background-color: #85a0fa;
+}
+
+.nav-mobile {
+  display: block;
+}
+@media (min-width: 992px) {
+  .nav-mobile {
+    display: none;
+  }
+}
+
+.nav__bars-input {
+  display: block;
+  font-size: 16px;
+  color: #2D3958;
+  width: 88px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+@media (min-width: 992px) {
+  .nav__bars-input {
+    display: none;
+  }
+}
+
+.nav__bars-input:hover {
+  color: #4F77FF;
+}
+
+.nav__overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: none;
+  animation: fadeIn linear 0.2s;
+}
+
+.nav-mobile__description {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 320px;
+  max-width: 100%;
+  background-color: #fff;
+  z-index: 4;
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: all linear 0.3s;
+}
+
+.nav-mobile__button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 15px;
+}
+
+.nav-mobile__button--signup {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #4F77FF;
+  color: #FFF;
+  text-align: center;
+  font-family: Outfit;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 170%;
+  text-transform: uppercase;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+.nav-mobile__button--signup:hover {
+  background-color: #85a0fa;
+}
+
+.nav-mobile__close {
+  font-size: 24px;
+  color: #7B88A8;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.nav-mobile__close i:hover {
+  color: #34373f;
+}
+
+.nav-mobile__list {
+  margin: 50px 0px;
+}
+
+.nav-mobile__item {
+  list-style: none;
+}
+
+.nav-mobile__link {
+  text-decoration: none;
+  color: #7B88A8;
+  display: block;
+  padding: 8px 0px;
+  font-size: 20px;
+  transition: all 0.2s;
+}
+
+.nav-mobile__link:hover {
   color: #85a0fa;
+}
+
+.nav-mobile__active .nav-mobile__link {
+  color: #4F77FF;
+}
+
+.nav__input:checked ~ .nav__overlay {
+  display: block;
+}
+
+.nav__input:checked ~ .nav-mobile__description {
+  transform: translateX(0%);
+  opacity: 1;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }/*# sourceMappingURL=styles.css.map */
