--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -404,7 +404,7 @@ h6 {
   }
 }
 .page-header {
-  background-image: url(../../../assets/img/img_background-head.png);
+  background-image: url(../../assets/img/img_background-head.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
