--- a/src/scss/components/blog.scss
+++ b/src/scss/components/blog.scss
@@ -1,6 +1,27 @@
 .blog {
     background-color: #F8FAFC;
-    padding-bottom: 120px;
+    padding: 70px 0px;
+    
+    @media (max-width: 575px) {
+        
+    }
+    
+    @media (min-width: 575px) {
+            
+    }
+    
+    @media (min-width: 768px) {
+        padding: 120px 0px;
+         
+    }
+        
+    @media (min-width: 992px) {
+             
+    }
+    
+    @media (min-width: 1200px) {
+            
+    }
 
 }
 
@@ -9,35 +30,32 @@
     color: #2D3958;
     text-align: center;
     font-family: Outfit;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: 500;
     line-height: 116.667%;
     padding: 20px 0px;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 
     @media (max-width: 575px) {
-        
         
     }
         
     @media (min-width: 575px) {
       
-            
     }
         
     @media (min-width: 768px) {
-      
+        font-size: 40px;
+        margin-bottom: 60px;
             
     }
         
     @media (min-width: 992px) {
         font-size: 48px;
             
-            
     }
     
     @media (min-width: 1200px) {
-            
             
     }
 
@@ -203,7 +221,7 @@
 
 }
 
-.blog__item--more {
+.blog__item-head {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -212,7 +230,7 @@
 
 }
 
-.blog-more__img {
+.blog__item-img {
     width: 100px;
 
 }
