--- a/src/scss/components/client.css
+++ b/src/scss/components/client.css
@@ -1,28 +1,37 @@
 .client {
   width: 100%;
-  padding-bottom: 120px;
   background-color: #F8FAFC;
+  padding-bottom: 80px;
   overflow: hidden;
 }
-
+@media (min-width: 768px) {
+  .client {
+    padding-bottom: 120px;
+  }
+}
 .client__heading {
   color: #2D3958;
   font-family: Outfit;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 500;
   line-height: 116.667%;
   padding: 20px 0px;
-  margin-top: 100px;
   text-align: center;
+  margin-top: 40px;
 }
-
+@media (min-width: 768px) {
+  .client__heading {
+    margin-top: 100px;
+    font-size: 48px;
+  }
+}
 .client__sub {
   color: #7B88A8;
   font-family: Outfit;
   font-size: 22px;
   font-weight: 400;
   line-height: 145.455%;
-  padding: 30px 0px;
+  padding: 20px 0px;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -81,11 +90,11 @@
 }
 
 .client__item {
-  padding: 35px 35px 45px 35px;
   border-radius: 20px;
   border: 1px solid #E7E5EA;
   background-color: #FFF;
   min-height: 350px;
+  padding: 20px 15px 35px 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -93,7 +102,11 @@
   margin: 0px 15px;
   transition: box-shadow 0.4s;
 }
-
+@media (min-width: 768px) {
+  .client__item {
+    padding: 35px 35px 45px 35px;
+  }
+}
 .client__item:hover {
   box-shadow: 0px 20px 50px 0px rgba(79, 119, 255, 0.2);
 }
