--- a/src/scss/components/img.scss
+++ b/src/scss/components/img.scss
@@ -3,8 +3,29 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-bottom: 120px;
     padding: 0px 30px;
+    margin-bottom: 60px;
+    
+    @media (max-width: 575px) {
+        
+    }
+    
+    @media (min-width: 575px) {
+        
+    }
+    
+    @media (min-width: 768px) {
+        margin-bottom: 120px;
+         
+    }
+        
+    @media (min-width: 992px) {
+             
+    }
+    
+    @media (min-width: 1200px) {
+            
+    }
 
 }
 
@@ -12,42 +33,61 @@
     color: #2D3958;
     text-align: center;
     font-family: Outfit;
-    font-size: 50px;
+    font-size: 46px;
     font-style: normal;
     font-weight: 500;
     line-height: 112.5%;
-    padding: 120px 20px 90px 20px;
+    padding: 50px 0px;
 
     @media (max-width: 575px) {
-        
-        
+         
     }
         
     @media (min-width: 575px) {
-      
-            
+       
     }
         
     @media (min-width: 768px) {
         font-size: 64px;
-      
+        padding: 120px 20px 90px 20px;
             
     }
         
     @media (min-width: 992px) {
-            
-            
+              
     }
     
     @media (min-width: 1200px) {
-            
-            
+             
     }
 
 }
 
 .img__content {
-    margin-bottom: 70px;
+    margin-bottom: 50px;
+
+    @media (max-width: 575px) {
+        
+    }
+        
+    @media (min-width: 575px) {
+            
+    }
+        
+    @media (min-width: 768px) {
+        margin-bottom: 70px;
+         
+    }
+        
+    @media (min-width: 992px) {
+             
+    }
+    
+    @media (min-width: 1200px) {
+            
+    }
+
+
 }
 
 .img__list {
