--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -691,29 +691,38 @@ h6 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 120px;
   padding: 0px 30px;
+  margin-bottom: 60px;
 }
-
+@media (min-width: 768px) {
+  .img {
+    margin-bottom: 120px;
+  }
+}
 .img__heading {
   color: #2D3958;
   text-align: center;
   font-family: Outfit;
-  font-size: 50px;
+  font-size: 46px;
   font-style: normal;
   font-weight: 500;
   line-height: 112.5%;
-  padding: 120px 20px 90px 20px;
+  padding: 50px 0px;
 }
 @media (min-width: 768px) {
   .img__heading {
     font-size: 64px;
+    padding: 120px 20px 90px 20px;
   }
 }
 .img__content {
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
-
+@media (min-width: 768px) {
+  .img__content {
+    margin-bottom: 70px;
+  }
+}
 .img__list {
   display: flex;
   justify-content: center;
@@ -762,29 +771,38 @@ h6 {
 
 .client {
   width: 100%;
-  padding-bottom: 120px;
   background-color: #F8FAFC;
+  padding-bottom: 80px;
   overflow: hidden;
 }
-
+@media (min-width: 768px) {
+  .client {
+    padding-bottom: 120px;
+  }
+}
 .client__heading {
   color: #2D3958;
   font-family: Outfit;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 500;
   line-height: 116.667%;
   padding: 20px 0px;
-  margin-top: 100px;
   text-align: center;
+  margin-top: 40px;
 }
-
+@media (min-width: 768px) {
+  .client__heading {
+    margin-top: 100px;
+    font-size: 48px;
+  }
+}
 .client__sub {
   color: #7B88A8;
   font-family: Outfit;
   font-size: 22px;
   font-weight: 400;
   line-height: 145.455%;
-  padding: 30px 0px;
+  padding: 20px 0px;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -843,11 +861,11 @@ h6 {
 }
 
 .client__item {
-  padding: 35px 35px 45px 35px;
   border-radius: 20px;
   border: 1px solid #E7E5EA;
   background-color: #FFF;
   min-height: 350px;
+  padding: 20px 15px 35px 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -855,7 +873,11 @@ h6 {
   margin: 0px 15px;
   transition: box-shadow 0.4s;
 }
-
+@media (min-width: 768px) {
+  .client__item {
+    padding: 35px 35px 45px 35px;
+  }
+}
 .client__item:hover {
   box-shadow: 0px 20px 50px 0px rgba(79, 119, 255, 0.2);
 }
@@ -938,9 +960,13 @@ h6 {
 }
 
 .recent-projects {
-  margin: 120px 0px;
+  margin: 50px 0px;
 }
-
+@media (min-width: 768px) {
+  .recent-projects {
+    margin: 120px 0px;
+  }
+}
 .recent-projects__head {
   display: flex;
   justify-content: space-between;
@@ -951,12 +977,16 @@ h6 {
 .recent-projects__heading {
   color: #2D3958;
   font-family: Outfit;
-  font-size: 48px;
   font-weight: 500;
   line-height: 116.667%;
   padding: 20px 0px;
+  font-size: 40px;
 }
-
+@media (min-width: 768px) {
+  .recent-projects__heading {
+    font-size: 48px;
+  }
+}
 .recent-projects__arrow {
   font-size: 20px;
   display: flex;
@@ -1029,18 +1059,28 @@ h6 {
 
 .blog {
   background-color: #F8FAFC;
-  padding-bottom: 120px;
+  padding: 70px 0px;
 }
-
+@media (min-width: 768px) {
+  .blog {
+    padding: 120px 0px;
+  }
+}
 .blog__heading {
   color: #2D3958;
   text-align: center;
   font-family: Outfit;
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 500;
   line-height: 116.667%;
   padding: 20px 0px;
-  margin-bottom: 60px;
+  margin-bottom: 30px;
+}
+@media (min-width: 768px) {
+  .blog__heading {
+    font-size: 40px;
+    margin-bottom: 60px;
+  }
 }
 @media (min-width: 992px) {
   .blog__heading {
@@ -1165,7 +1205,7 @@ h6 {
   -webkit-line-clamp: 4;
 }
 
-.blog__item--more {
+.blog__item-head {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -1173,7 +1213,7 @@ h6 {
   width: 100%;
 }
 
-.blog-more__img {
+.blog__item-img {
   width: 100px;
 }
 
